--- a/package.json
+++ b/package.json
@@ -19,6 +19,18 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@googlemaps/js-api-loader": "^2.0.1",
     "@paralleldrive/cuid2": "^3.0.4",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
     "@supabase/supabase-js": "^2.80.0",
@@ -29,6 +41,8 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "jose": "^6.1.1",
     "jsonwebtoken": "^9.0.3",
@@ -40,7 +54,9 @@
     "react-hot-toast": "^2.6.0",
     "resend": "^6.6.0",
     "stripe": "^19.1.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.6",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   },
   "devDependencies": {
