Fix checkout flow and improve validation UX
- Wire up checkout button onClick handler (was missing!)
- Transform cart data structure for OrderModal compatibility
- Replace all alert() with toast.error() for friendlier messages
- Add store page, admin dashboard, order API routes
- Add gift cards, menu management, settings
- Add Prisma schema and migrations

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,75 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
+# OrderFlow Environment Variables
+# Copy this file to .env.local and fill in your values
 
-# Stripe
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_pk
-STRIPE_SECRET_KEY=your_stripe_sk
+# ===========================================
+# DATABASE (Required)
+# ===========================================
+# PostgreSQL connection string
+# Get from: Supabase, Neon, Railway, or any Postgres provider
+DATABASE_URL="postgresql://user:password@host:5432/database"
 
-# DoorDash (optional)
-DOORDASH_DEVELOPER_ID=
-DOORDASH_API_KEY=
-DOORDASH_SECRET=
+# ===========================================
+# AUTH (Required)
+# ===========================================
+# Secret for JWT tokens - generate with: openssl rand -base64 32
+JWT_SECRET="your-super-secret-jwt-key-at-least-32-characters"
 
-# App
-NEXT_PUBLIC_APP_URL=https://orderflow.vercel.app
+# ===========================================
+# APP URL (Required for production)
+# ===========================================
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+# Production: NEXT_PUBLIC_BASE_URL="https://orderflow.yourdomain.com"
+
+# ===========================================
+# STRIPE (Required for payments)
+# ===========================================
+# Get from: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY="sk_test_..."
+STRIPE_PUBLISHABLE_KEY="pk_test_..."
+
+# Webhook secret - create webhook at: https://dashboard.stripe.com/webhooks
+# Endpoint URL: https://yourdomain.com/api/webhooks/stripe
+# Events: payment_intent.succeeded, payment_intent.payment_failed, account.updated, charge.refunded
+STRIPE_WEBHOOK_SECRET="whsec_..."
+
+# ===========================================
+# EMAIL (Required for notifications)
+# ===========================================
+# Get from: https://resend.com/api-keys
+RESEND_API_KEY="re_..."
+
+# From email address (must be verified domain in Resend, or use their test domain)
+FROM_EMAIL="OrderFlow <noreply@yourdomain.com>"
+
+# ===========================================
+# ADMIN ACCESS (Required)
+# ===========================================
+# Comma-separated list of emails that can access /admin/dashboard
+ADMIN_EMAILS="admin@yourdomain.com"
+
+# ===========================================
+# DOORDASH (Optional - for delivery)
+# ===========================================
+# Get from: https://developer.doordash.com
+# Note: Restaurants can also configure their own DoorDash credentials in Settings
+# DOORDASH_DEVELOPER_ID="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+# DOORDASH_API_KEY="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+# DOORDASH_SECRET="base64-encoded-secret"
+
+# ===========================================
+# IMAGE UPLOADS (Optional - S3/R2)
+# ===========================================
+# For Cloudflare R2:
+# S3_ENDPOINT="https://[account-id].r2.cloudflarestorage.com"
+# S3_ACCESS_KEY_ID="..."
+# S3_SECRET_ACCESS_KEY="..."
+# S3_BUCKET="orderflow"
+# S3_PUBLIC_URL="https://cdn.yourdomain.com"
+
+# For AWS S3:
+# S3_ENDPOINT=""  # Leave empty for AWS
+# S3_REGION="us-east-1"
+# S3_ACCESS_KEY_ID="..."
+# S3_SECRET_ACCESS_KEY="..."
+# S3_BUCKET="orderflow"
+# S3_PUBLIC_URL="https://orderflow.s3.amazonaws.com"
