--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:report": "playwright show-report"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.975.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -38,6 +39,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -48,12 +51,13 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "nodemailer": "^7.0.13",
     "postcss": "^8.4.32",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
-    "resend": "^6.6.0",
-    "stripe": "^19.1.0",
+    "resend": "^2.1.0",
+    "stripe": "^19.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
@@ -61,11 +65,13 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@prisma/client": "^5.22.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^5.22.0"
   }
 }
