feat: complete checkout flow with order tracking
- Checkout page with customer info form
- Stripe payment integration
- Order confirmation page with confetti
- Real-time order status tracker
- Status steps: Confirmed → Preparing → Ready → Complete
- Auto-refresh status every 15 seconds
- Cart persisted to localStorage
- Pickup/Delivery toggle throughout flow

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nodemailer": "^7.0.13",
     "postcss": "^8.4.32",
     "react": "^18",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
     "resend": "^2.1.0",
