--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "setup-db": "npx tsx scripts/setup-db.ts",
@@ -19,6 +19,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@googlemaps/js-api-loader": "^2.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@paralleldrive/cuid2": "^3.0.4",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -49,6 +50,7 @@
     "framer-motion": "^12.29.2",
     "jose": "^6.1.1",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "nodemailer": "^7.0.13",
@@ -56,13 +58,15 @@
     "react": "^18",
     "react-confetti": "^6.4.0",
     "react-dom": "^18",
+    "react-error-boundary": "^6.1.0",
     "react-hot-toast": "^2.6.0",
     "resend": "^2.1.0",
     "stripe": "^19.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
@@ -74,5 +78,8 @@
     "eslint-config-next": "14.0.4",
     "pg": "^8.16.3",
     "prisma": "^5.22.0"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   }
 }
