--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "14.0.4",
     "nodemailer": "^7.0.13",
     "postcss": "^8.4.32",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-confetti": "^6.4.0",
     "react-dom": "^18",
@@ -65,6 +66,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.12.0",
     "typescript": "^5",
     "zod": "^4.3.6"
   },
@@ -73,6 +75,7 @@
     "@prisma/client": "^5.22.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.6",
     "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
