--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18",
     "react-error-boundary": "^6.1.0",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.7.0",
     "resend": "^2.1.0",
     "stripe": "^19.3.1",
     "tailwind-merge": "^3.4.0",
