--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jose": "^6.1.1",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.0.0",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "nodemailer": "^7.0.13",
@@ -75,6 +76,7 @@
     "@playwright/test": "^1.57.0",
     "@prisma/client": "^5.22.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.23",
     "@types/pg": "^8.16.0",
     "@types/qrcode": "^1.5.6",
     "dotenv": "^17.2.3",
